services/demo-v119/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-v119
  labels:
    name: demo-v119
    app: demo-v119
