services/demo-v119/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-v119
  namespace: demo-v119
  labels:
    app: demo-v119
    version: v1.0.0
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: demo-v119
  template:
    metadata:
      labels:
        app: demo-v119
        version: v1.0.0
      annotations:
        argocd.argoproj.io/sync-wave: "0"
        timestamp: "1761036028"
        deployment.kubernetes.io/revision: "1"
    spec:
      containers:
      - name: demo-v119
        image: ghcr.io/ductri09072004/demo-v119:main-b3fb7eef2d085c003f116a41fddb339cee44e03a
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          tcpSocket:
            port: 5001
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 5001
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
